update auth and entity